--- a/ranges-ts/alg.heap.operations.html
+++ b/ranges-ts/alg.heap.operations.html
@@ -11,7 +11,7 @@ may be removed by
 or a new element added by
 <span class='texttt'>push_heap()</span>,
 in
-<span class='math'><span class='mathcal'>O</span>(<span class="mathrm">log</span>(<span class='mathalpha'>N</span>))</span>
+<span class='math'>Ο(<span class='math'><span class="mathrm">log</span>(<span class='mathalpha'>N</span>)</span>)</span>
 time.
 </p></li></ul></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >These properties make heaps useful as priority queues.</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p ><span class='texttt'>make_heap()</span>
 converts a range into a heap and
