--- a/ranges-ts/alg.min.max.html
+++ b/ranges-ts/alg.min.max.html
@@ -80,7 +80,7 @@ such that for every iterator
 <span class='texttt'>j</span>
 in the range
 <span class='texttt'>[first,last)</span>
-the following corresponding condition holds:
+the following corresponding condition holds: <br/>
 <span class='texttt'>invoke(comp, invoke(proj, *j), invoke(proj, *i)) == false</span>.
 Returns
 <span class='texttt'>last</span>
@@ -108,7 +108,7 @@ such that for every iterator
 <span class='texttt'>j</span>
 in the range
 <span class='texttt'>[first,last)</span>
-the following corresponding condition holds:
+the following corresponding condition holds: <br/>
 <span class='texttt'>invoke(comp, invoke(proj, *i), invoke(proj, *j)) == false</span>.
 Returns
 <span class='texttt'>last</span>
