--- a/ranges-ts/alg.modifying.operations.html
+++ b/ranges-ts/alg.modifying.operations.html
@@ -473,9 +473,12 @@ the iterator
 in the range
 <span class='texttt'>[first,last)</span>
 for which the following corresponding conditions hold:
-<span class='texttt'>invoke(proj, *i) == invoke(proj, *(i - 1))</span>
-or
-<span class='texttt'>invoke(pred, invoke(proj, *i), invoke(proj, *(i - 1))) != false</span>.</p></div></div><div class='para' id='alg.unique-6'><div class='marginalizedparent'><a class='marginalized' href='#alg.unique-6'>6</a></div><div class='itemdescr'><p ><i>Returns:</i>
+</p><pre class='codeblock'>
+invoke(proj, *i) == invoke(proj, *(i - 1))
+</pre><p >or
+</p><pre class='codeblock'>
+invoke(pred, invoke(proj, *i), invoke(proj, *(i - 1))) != false.
+</pre></div></div><div class='para' id='alg.unique-6'><div class='marginalizedparent'><a class='marginalized' href='#alg.unique-6'>6</a></div><div class='itemdescr'><p ><i>Returns:</i>
 A pair consisting of <span class='texttt'>last</span> and the end of the resulting range.</p></div></div><div class='para' id='alg.unique-7'><div class='marginalizedparent'><a class='marginalized' href='#alg.unique-7'>7</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 For nonempty ranges, exactly
 <span class='texttt'>last - first - 1</span>
@@ -632,7 +635,7 @@ template &lt;ForwardRange Rng, class Proj = identity,
 </code></p><div class='itemdescr'></div><div class='para' id='alg.partitions-3'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-3'>3</a></div><div class='itemdescr'><p ><i>Effects:</i> Permutes the elements in the range <span class='texttt'>[first,last)</span> such that there exists an iterator <span class='texttt'>i</span>
 such that for every iterator <span class='texttt'>j</span> in the range <span class='texttt'>[first,i)</span>
 <span class='texttt'>invoke(pred, invoke(proj, *j)) != false</span>, and for every iterator <span class='texttt'>k</span> in the
-range <span class='texttt'>[i,last)</span>, <span class='texttt'>invoke(pred, invoke(proj, *k)) == false</span></p></div></div><div class='para' id='alg.partitions-4'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-4'>4</a></div><div class='itemdescr'><p ><i>Returns:</i> An iterator <span class='texttt'>i</span> such that for every iterator <span class='texttt'>j</span> in the range <span class='texttt'>[first,i)</span>
+range <span class='texttt'>[i,last)</span>, <span class='texttt'>invoke(pred, invoke(proj, *k)) == false</span>.</p></div></div><div class='para' id='alg.partitions-4'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-4'>4</a></div><div class='itemdescr'><p ><i>Returns:</i> An iterator <span class='texttt'>i</span> such that for every iterator <span class='texttt'>j</span> in the range <span class='texttt'>[first,i)</span>
 <span class='texttt'>invoke(pred, invoke(proj, *j)) != false</span>,
 and for every iterator <span class='texttt'>k</span> in the range <span class='texttt'>[i,last)</span>,
 <span class='texttt'>invoke(pred, invoke(proj, *k)) == false</span>.</p></div></div><div class='para' id='alg.partitions-5'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-5'>5</a></div><div class='itemdescr'><p ><i>Complexity:</i> If I meets the requirements for a BidirectionalIterator, at most
@@ -652,7 +655,7 @@ template &lt;BidirectionalRange Rng, class Proj = identity,
 </code></p><div class='itemdescr'></div><div class='para' id='alg.partitions-6'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-6'>6</a></div><div class='itemdescr'><p ><i>Effects:</i> Permutes the elements in the range <span class='texttt'>[first,last)</span> such that there exists an iterator <span class='texttt'>i</span>
 such that for every iterator <span class='texttt'>j</span> in the range <span class='texttt'>[first,i)</span>
 <span class='texttt'>invoke(pred, invoke(proj, *j)) != false</span>, and for every iterator <span class='texttt'>k</span> in the
-range <span class='texttt'>[i,last)</span>, <span class='texttt'>invoke(pred, invoke(proj, *k)) == false</span></p></div></div><div class='para' id='alg.partitions-7'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-7'>7</a></div><div class='itemdescr'><p ><i>Returns:</i>
+range <span class='texttt'>[i,last)</span>, <span class='texttt'>invoke(pred, invoke(proj, *k)) == false</span>.</p></div></div><div class='para' id='alg.partitions-7'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-7'>7</a></div><div class='itemdescr'><p ><i>Returns:</i>
 An iterator
 <span class='texttt'>i</span>
 such that for every iterator
