--- a/ranges-ts/alg.partitions.html
+++ b/ranges-ts/alg.partitions.html
@@ -27,7 +27,7 @@ template &lt;ForwardRange Rng, class Proj = identity,
 </code></p><div class='itemdescr'></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Effects:</i> Permutes the elements in the range <span class='texttt'>[first,last)</span> such that there exists an iterator <span class='texttt'>i</span>
 such that for every iterator <span class='texttt'>j</span> in the range <span class='texttt'>[first,i)</span>
 <span class='texttt'>invoke(pred, invoke(proj, *j)) != false</span>, and for every iterator <span class='texttt'>k</span> in the
-range <span class='texttt'>[i,last)</span>, <span class='texttt'>invoke(pred, invoke(proj, *k)) == false</span></p></div></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Returns:</i> An iterator <span class='texttt'>i</span> such that for every iterator <span class='texttt'>j</span> in the range <span class='texttt'>[first,i)</span>
+range <span class='texttt'>[i,last)</span>, <span class='texttt'>invoke(pred, invoke(proj, *k)) == false</span>.</p></div></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Returns:</i> An iterator <span class='texttt'>i</span> such that for every iterator <span class='texttt'>j</span> in the range <span class='texttt'>[first,i)</span>
 <span class='texttt'>invoke(pred, invoke(proj, *j)) != false</span>,
 and for every iterator <span class='texttt'>k</span> in the range <span class='texttt'>[i,last)</span>,
 <span class='texttt'>invoke(pred, invoke(proj, *k)) == false</span>.</p></div></div><div class='para' id='5'><div class='marginalizedparent'><a class='marginalized' href='#5'>5</a></div><div class='itemdescr'><p ><i>Complexity:</i> If I meets the requirements for a BidirectionalIterator, at most
@@ -47,7 +47,7 @@ template &lt;BidirectionalRange Rng, class Proj = identity,
 </code></p><div class='itemdescr'></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><div class='itemdescr'><p ><i>Effects:</i> Permutes the elements in the range <span class='texttt'>[first,last)</span> such that there exists an iterator <span class='texttt'>i</span>
 such that for every iterator <span class='texttt'>j</span> in the range <span class='texttt'>[first,i)</span>
 <span class='texttt'>invoke(pred, invoke(proj, *j)) != false</span>, and for every iterator <span class='texttt'>k</span> in the
-range <span class='texttt'>[i,last)</span>, <span class='texttt'>invoke(pred, invoke(proj, *k)) == false</span></p></div></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><div class='itemdescr'><p ><i>Returns:</i>
+range <span class='texttt'>[i,last)</span>, <span class='texttt'>invoke(pred, invoke(proj, *k)) == false</span>.</p></div></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><div class='itemdescr'><p ><i>Returns:</i>
 An iterator
 <span class='texttt'>i</span>
 such that for every iterator
