--- a/ranges-ts/alg.search.html
+++ b/ranges-ts/alg.search.html
@@ -24,8 +24,9 @@ such that for every non-negative integer
 less than
 <span class='texttt'>last2 - first2</span>
 the following condition holds:
-<span class='texttt'>invoke(pred, invoke(proj1, *(i + n)), invoke(proj2, *(first2 + n))) != false</span>.
-Returns <span class='texttt'>first1</span>
+</p><pre class='codeblock'>
+invoke(pred, invoke(proj1, *(i + n)), invoke(proj2, *(first2 + n))) != false.
+</pre><p >Returns <span class='texttt'>first1</span>
 if <span class='texttt'>[first2,last2)</span> is empty,
 otherwise returns <span class='texttt'>last1</span>
 if no such iterator is found.</p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Complexity:</i>
