--- a/ranges-ts/alg.unique.html
+++ b/ranges-ts/alg.unique.html
@@ -54,9 +54,12 @@ the iterator
 in the range
 <span class='texttt'>[first,last)</span>
 for which the following corresponding conditions hold:
-<span class='texttt'>invoke(proj, *i) == invoke(proj, *(i - 1))</span>
-or
-<span class='texttt'>invoke(pred, invoke(proj, *i), invoke(proj, *(i - 1))) != false</span>.</p></div></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><div class='itemdescr'><p ><i>Returns:</i>
+</p><pre class='codeblock'>
+invoke(proj, *i) == invoke(proj, *(i - 1))
+</pre><p >or
+</p><pre class='codeblock'>
+invoke(pred, invoke(proj, *i), invoke(proj, *(i - 1))) != false.
+</pre></div></div><div class='para' id='6'><div class='marginalizedparent'><a class='marginalized' href='#6'>6</a></div><div class='itemdescr'><p ><i>Returns:</i>
 A pair consisting of <span class='texttt'>last</span> and the end of the resulting range.</p></div></div><div class='para' id='7'><div class='marginalizedparent'><a class='marginalized' href='#7'>7</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 For nonempty ranges, exactly
 <span class='texttt'>last - first - 1</span>
