--- a/ranges-ts/algorithms.html
+++ b/ranges-ts/algorithms.html
@@ -1429,8 +1429,9 @@ such that for every non-negative integer
 less than
 <span class='texttt'>last2 - first2</span>
 the following condition holds:
-<span class='texttt'>invoke(pred, invoke(proj1, *(i + n)), invoke(proj2, *(first2 + n))) != false</span>.
-Returns <span class='texttt'>first1</span>
+</p><pre class='codeblock'>
+invoke(pred, invoke(proj1, *(i + n)), invoke(proj2, *(first2 + n))) != false.
+</pre><p >Returns <span class='texttt'>first1</span>
 if <span class='texttt'>[first2,last2)</span> is empty,
 otherwise returns <span class='texttt'>last1</span>
 if no such iterator is found.</p></div></div><div class='para' id='alg.search-3'><div class='marginalizedparent'><a class='marginalized' href='#alg.search-3'>3</a></div><div class='itemdescr'><p ><i>Complexity:</i>
@@ -1943,9 +1944,12 @@ the iterator
 in the range
 <span class='texttt'>[first,last)</span>
 for which the following corresponding conditions hold:
-<span class='texttt'>invoke(proj, *i) == invoke(proj, *(i - 1))</span>
-or
-<span class='texttt'>invoke(pred, invoke(proj, *i), invoke(proj, *(i - 1))) != false</span>.</p></div></div><div class='para' id='alg.unique-6'><div class='marginalizedparent'><a class='marginalized' href='#alg.unique-6'>6</a></div><div class='itemdescr'><p ><i>Returns:</i>
+</p><pre class='codeblock'>
+invoke(proj, *i) == invoke(proj, *(i - 1))
+</pre><p >or
+</p><pre class='codeblock'>
+invoke(pred, invoke(proj, *i), invoke(proj, *(i - 1))) != false.
+</pre></div></div><div class='para' id='alg.unique-6'><div class='marginalizedparent'><a class='marginalized' href='#alg.unique-6'>6</a></div><div class='itemdescr'><p ><i>Returns:</i>
 A pair consisting of <span class='texttt'>last</span> and the end of the resulting range.</p></div></div><div class='para' id='alg.unique-7'><div class='marginalizedparent'><a class='marginalized' href='#alg.unique-7'>7</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 For nonempty ranges, exactly
 <span class='texttt'>last - first - 1</span>
@@ -2102,7 +2106,7 @@ template &lt;ForwardRange Rng, class Proj = identity,
 </code></p><div class='itemdescr'></div><div class='para' id='alg.partitions-3'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-3'>3</a></div><div class='itemdescr'><p ><i>Effects:</i> Permutes the elements in the range <span class='texttt'>[first,last)</span> such that there exists an iterator <span class='texttt'>i</span>
 such that for every iterator <span class='texttt'>j</span> in the range <span class='texttt'>[first,i)</span>
 <span class='texttt'>invoke(pred, invoke(proj, *j)) != false</span>, and for every iterator <span class='texttt'>k</span> in the
-range <span class='texttt'>[i,last)</span>, <span class='texttt'>invoke(pred, invoke(proj, *k)) == false</span></p></div></div><div class='para' id='alg.partitions-4'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-4'>4</a></div><div class='itemdescr'><p ><i>Returns:</i> An iterator <span class='texttt'>i</span> such that for every iterator <span class='texttt'>j</span> in the range <span class='texttt'>[first,i)</span>
+range <span class='texttt'>[i,last)</span>, <span class='texttt'>invoke(pred, invoke(proj, *k)) == false</span>.</p></div></div><div class='para' id='alg.partitions-4'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-4'>4</a></div><div class='itemdescr'><p ><i>Returns:</i> An iterator <span class='texttt'>i</span> such that for every iterator <span class='texttt'>j</span> in the range <span class='texttt'>[first,i)</span>
 <span class='texttt'>invoke(pred, invoke(proj, *j)) != false</span>,
 and for every iterator <span class='texttt'>k</span> in the range <span class='texttt'>[i,last)</span>,
 <span class='texttt'>invoke(pred, invoke(proj, *k)) == false</span>.</p></div></div><div class='para' id='alg.partitions-5'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-5'>5</a></div><div class='itemdescr'><p ><i>Complexity:</i> If I meets the requirements for a BidirectionalIterator, at most
@@ -2122,7 +2126,7 @@ template &lt;BidirectionalRange Rng, class Proj = identity,
 </code></p><div class='itemdescr'></div><div class='para' id='alg.partitions-6'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-6'>6</a></div><div class='itemdescr'><p ><i>Effects:</i> Permutes the elements in the range <span class='texttt'>[first,last)</span> such that there exists an iterator <span class='texttt'>i</span>
 such that for every iterator <span class='texttt'>j</span> in the range <span class='texttt'>[first,i)</span>
 <span class='texttt'>invoke(pred, invoke(proj, *j)) != false</span>, and for every iterator <span class='texttt'>k</span> in the
-range <span class='texttt'>[i,last)</span>, <span class='texttt'>invoke(pred, invoke(proj, *k)) == false</span></p></div></div><div class='para' id='alg.partitions-7'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-7'>7</a></div><div class='itemdescr'><p ><i>Returns:</i>
+range <span class='texttt'>[i,last)</span>, <span class='texttt'>invoke(pred, invoke(proj, *k)) == false</span>.</p></div></div><div class='para' id='alg.partitions-7'><div class='marginalizedparent'><a class='marginalized' href='#alg.partitions-7'>7</a></div><div class='itemdescr'><p ><i>Returns:</i>
 An iterator
 <span class='texttt'>i</span>
 such that for every iterator
@@ -2631,7 +2635,7 @@ template &lt;InputRange Rng1, InputRange Rng2, WeaklyIncrementable O,
 Constructs a sorted union of the elements from the two ranges;
 that is, the set of elements that are present in one or both of the ranges.</p></div></div><div class='para' id='set.union-2'><div class='marginalizedparent'><a class='marginalized' href='#set.union-2'>2</a></div><div class='itemdescr'><p ><i>Requires:</i>
 The resulting range shall not overlap with either of the original ranges.</p></div></div><div class='para' id='set.union-3'><div class='marginalizedparent'><a class='marginalized' href='#set.union-3'>3</a></div><div class='itemdescr'><p ><i>Returns:</i>
-<span class='texttt'>make_tagged_tuple&lt;tag::in1, tag::in2, tag::out&gt;(last1, last2, result + <span class='math'><span class='mathalpha'>n</span></span>)</span>, where <span class='texttt'><span class='math'><span class='mathalpha'>n</span></span></span> is
+<span class='texttt'>make_tagged_tuple&lt;tag::in1, tag::in2, tag::out&gt;(last1, last2, result + <span class='math'><span class='mathalpha'>n</span></span>)</span>, <br/> where <span class='texttt'><span class='math'><span class='mathalpha'>n</span></span></span> is
 the number of elements in the constructed range.</p></div></div><div class='para' id='set.union-4'><div class='marginalizedparent'><a class='marginalized' href='#set.union-4'>4</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 At most
 <span class='texttt'>2 * ((last1 - first1) + (last2 - first2)) - 1</span>
@@ -2734,7 +2738,7 @@ to the range beginning at
 <span class='texttt'>result</span>.
 The elements in the constructed range are sorted.</p></div></div><div class='para' id='set.symmetric.difference-2'><div class='marginalizedparent'><a class='marginalized' href='#set.symmetric.difference-2'>2</a></div><div class='itemdescr'><p ><i>Requires:</i>
 The resulting range shall not overlap with either of the original ranges.</p></div></div><div class='para' id='set.symmetric.difference-3'><div class='marginalizedparent'><a class='marginalized' href='#set.symmetric.difference-3'>3</a></div><div class='itemdescr'><p ><i>Returns:</i>
-<span class='texttt'>make_tagged_tuple&lt;tag::in1, tag::in2, tag::out&gt;(last1, last2, result + <span class='math'><span class='mathalpha'>n</span></span>)</span>, where <span class='texttt'><span class='math'><span class='mathalpha'>n</span></span></span> is
+<span class='texttt'>make_tagged_tuple&lt;tag::in1, tag::in2, tag::out&gt;(last1, last2, result + <span class='math'><span class='mathalpha'>n</span></span>)</span>, <br/> where <span class='texttt'><span class='math'><span class='mathalpha'>n</span></span></span> is
 the number of elements in the constructed range.</p></div></div><div class='para' id='set.symmetric.difference-4'><div class='marginalizedparent'><a class='marginalized' href='#set.symmetric.difference-4'>4</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 At most
 <span class='texttt'>2 * ((last1 - first1) + (last2 - first2)) - 1</span>
@@ -2757,7 +2761,7 @@ may be removed by
 or a new element added by
 <span class='texttt'>push_heap()</span>,
 in
-<span class='math'><span class='mathcal'>O</span>(<span class="mathrm">log</span>(<span class='mathalpha'>N</span>))</span>
+<span class='math'>Ο(<span class='math'><span class="mathrm">log</span>(<span class='mathalpha'>N</span>)</span>)</span>
 time.
 </p></li></ul></div><div class='para' id='alg.heap.operations-2'><div class='marginalizedparent'><a class='marginalized' href='#alg.heap.operations-2'>2</a></div><p >These properties make heaps useful as priority queues.</p></div><div class='para' id='alg.heap.operations-3'><div class='marginalizedparent'><a class='marginalized' href='#alg.heap.operations-3'>3</a></div><p ><span class='texttt'>make_heap()</span>
 converts a range into a heap and
@@ -2943,7 +2947,7 @@ such that for every iterator
 <span class='texttt'>j</span>
 in the range
 <span class='texttt'>[first,last)</span>
-the following corresponding condition holds:
+the following corresponding condition holds: <br/>
 <span class='texttt'>invoke(comp, invoke(proj, *j), invoke(proj, *i)) == false</span>.
 Returns
 <span class='texttt'>last</span>
@@ -2971,7 +2975,7 @@ such that for every iterator
 <span class='texttt'>j</span>
 in the range
 <span class='texttt'>[first,last)</span>
-the following corresponding condition holds:
+the following corresponding condition holds: <br/>
 <span class='texttt'>invoke(comp, invoke(proj, *i), invoke(proj, *j)) == false</span>.
 Returns
 <span class='texttt'>last</span>
