--- a/ranges-ts/depr.html
+++ b/ranges-ts/depr.html
@@ -33,8 +33,10 @@ template &lt;InputRange Rng1, class I2, class R = equal_to&lt;&gt;,
     mismatch(Rng1&amp;&amp; rng1, I2&amp;&amp; first2_, R comp = R{},
              Proj1 proj1 = Proj1{}, Proj2 proj2 = Proj2{});
 </pre></div><div class='para' id='algo.range-and-a-half-3'><div class='marginalizedparent'><a class='marginalized' href='#algo.range-and-a-half-3'>3</a></div><p ><i>Effects:</i>
-Equivalent to: <span class='texttt'>return mismatch(first1, last1, std::forward&lt;I2&gt;(first2_), unreachable, comp, proj1, proj2);</span>,
-except that the underlying algorithm never increments <span class='texttt'>first2</span> more than <span class='texttt'>last1 - first1</span> times.</p><pre class='codeblock'>
+Equivalent to:
+</p><pre class='codeblock'>
+return mismatch(first1, last1, std::forward&lt;I2&gt;(first2_), unreachable{}, comp, proj1, proj2);
+</pre><p >except that the underlying algorithm never increments <span class='texttt'>first2</span> more than <span class='texttt'>last1 - first1</span> times.</p><pre class='codeblock'>
 template &lt;InputIterator I1, Sentinel&lt;I1&gt; S1, class I2,
     class R = equal_to&lt;&gt;, class Proj1 = identity, class Proj2 = identity&gt;
   requires InputIterator&lt;decay_t&lt;I2&gt;&gt; &amp;&amp; !Range&lt;I2&gt; &amp;&amp;
@@ -49,7 +51,10 @@ template &lt;InputRange Rng1, class I2, class R = equal_to&lt;&gt;,
   bool equal(Rng1&amp;&amp; rng1, I2&amp;&amp; first2_, R comp = R{},
              Proj1 proj1 = Proj1{}, Proj2 proj2 = Proj2{});
 </pre></div><div class='para' id='algo.range-and-a-half-4'><div class='marginalizedparent'><a class='marginalized' href='#algo.range-and-a-half-4'>4</a></div><p ><i>Effects:</i>
-Equivalent to: <span class='texttt'>return first1 == mismatch(first1, last1, std::forward&lt;I2&gt;(first2_), comp, proj1, proj2).in1();</span></p><pre class='codeblock'>
+Equivalent to:
+</p><pre class='codeblock'>
+return first1 == mismatch(first1, last1, std::forward&lt;I2&gt;(first2_), comp, proj1, proj2).in1();
+</pre><pre class='codeblock'>
 template &lt;ForwardIterator I1, Sentinel&lt;I1&gt; S1, class I2,
     class R = equal_to&lt;&gt;, class Proj1 = identity, class Proj2 = identity&gt;
   requires ForwardIterator&lt;decay_t&lt;I2&gt;&gt; &amp;&amp; !Range&lt;I2&gt; &amp;&amp;
@@ -105,6 +110,8 @@ template &lt;InputRange Rng, class I2, WeaklyIncrementable O, CopyConstructible 
     transform(Rng&amp;&amp; rng1, I2&amp;&amp; first2_, O result,
               F binary_op, Proj1 proj1 = Proj1{}, Proj2 proj2 = Proj2{});
 </pre></div><div class='para' id='algo.range-and-a-half-7'><div class='marginalizedparent'><a class='marginalized' href='#algo.range-and-a-half-7'>7</a></div><p ><i>Effects:</i>
-Equivalent to: <span class='texttt'>return transform(first1, last1, std::forward&lt;I2&gt;(first2_), unreachable, pred, proj1, proj2);</span>,
-except that the underlying algorithm never increments <span class='texttt'>first2</span> more than <span class='texttt'>last1 - first1</span> times.
+Equivalent to:
+</p><pre class='codeblock'>
+return transform(first1, last1, std::forward&lt;I2&gt;(first2_), unreachable{}, pred, proj1, proj2);
+</pre><p >except that the underlying algorithm never increments <span class='texttt'>first2</span> more than <span class='texttt'>last1 - first1</span> times.
 </p></div></div></div></div></body></html>
