--- a/ranges-ts/istreambuf.iterator.cons.html
+++ b/ranges-ts/istreambuf.iterator.cons.html
@@ -8,9 +8,9 @@ istreambuf_iterator(basic_istream&lt;charT, traits&gt;&amp; s) noexcept;
 istreambuf_iterator(basic_streambuf&lt;charT, traits&gt;* s) noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Constructs an
-<span class='texttt'>istreambuf_iterator&lt;&gt;</span>
+<span class='texttt'>istreambuf_iterator</span>
 that uses the
-<span class='texttt'>basic_streambuf&lt;&gt;</span>
+<span class='texttt'>basic_streambuf</span>
 object
 <span class='texttt'>*(s.rdbuf())</span>,
 or
@@ -23,9 +23,9 @@ is null.
 istreambuf_iterator(const proxy&amp; p) noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Constructs a
-<span class='texttt'>istreambuf_iterator&lt;&gt;</span>
+<span class='texttt'>istreambuf_iterator</span>
 that uses the
-<span class='texttt'>basic_streambuf&lt;&gt;</span>
+<span class='texttt'>basic_streambuf</span>
 object pointed to by the
 <span class='texttt'>proxy</span>
 object's constructor argument <span class='texttt'>p</span>.
