--- a/ranges-ts/iterator.primitives.html
+++ b/ranges-ts/iterator.primitives.html
@@ -82,7 +82,7 @@ The nested type \tcode{pointer} is computed as follows:
 \begin{itemize}
 \item If
       \tcode{Out::pointer} is valid and denotes a type, then
-      \tcode{std::iterator_traits&lt;Out&gt;::pointer} is \tcode{Out::pointer}.
+      \tcode{std::iterator_traits&lt;Out&gt;::pointer} is \tcode{Out::\brk{}pointer}.
 \item Otherwise, \tcode{std::iterator_traits&lt;Out&gt;::pointer} is \tcode{void}.
 \end{itemize}
 
