--- a/ranges-ts/alg.sorting.html
+++ b/ranges-ts/alg.sorting.html
@@ -451,7 +451,7 @@ template &lt;InputRange Rng1, InputRange Rng2, WeaklyIncrementable O,
 Constructs a sorted union of the elements from the two ranges;
 that is, the set of elements that are present in one or both of the ranges.</p></div></div><div class='para' id='set.union-2'><div class='marginalizedparent'><a class='marginalized' href='#set.union-2'>2</a></div><div class='itemdescr'><p ><i>Requires:</i>
 The resulting range shall not overlap with either of the original ranges.</p></div></div><div class='para' id='set.union-3'><div class='marginalizedparent'><a class='marginalized' href='#set.union-3'>3</a></div><div class='itemdescr'><p ><i>Returns:</i>
-<span class='texttt'>make_tagged_tuple&lt;tag::in1, tag::in2, tag::out&gt;(last1, last2, result + <span class='math'><span class='mathalpha'>n</span></span>)</span>, where <span class='texttt'><span class='math'><span class='mathalpha'>n</span></span></span> is
+<span class='texttt'>make_tagged_tuple&lt;tag::in1, tag::in2, tag::out&gt;(last1, last2, result + <span class='math'><span class='mathalpha'>n</span></span>)</span>, <br/> where <span class='texttt'><span class='math'><span class='mathalpha'>n</span></span></span> is
 the number of elements in the constructed range.</p></div></div><div class='para' id='set.union-4'><div class='marginalizedparent'><a class='marginalized' href='#set.union-4'>4</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 At most
 <span class='texttt'>2 * ((last1 - first1) + (last2 - first2)) - 1</span>
@@ -554,7 +554,7 @@ to the range beginning at
 <span class='texttt'>result</span>.
 The elements in the constructed range are sorted.</p></div></div><div class='para' id='set.symmetric.difference-2'><div class='marginalizedparent'><a class='marginalized' href='#set.symmetric.difference-2'>2</a></div><div class='itemdescr'><p ><i>Requires:</i>
 The resulting range shall not overlap with either of the original ranges.</p></div></div><div class='para' id='set.symmetric.difference-3'><div class='marginalizedparent'><a class='marginalized' href='#set.symmetric.difference-3'>3</a></div><div class='itemdescr'><p ><i>Returns:</i>
-<span class='texttt'>make_tagged_tuple&lt;tag::in1, tag::in2, tag::out&gt;(last1, last2, result + <span class='math'><span class='mathalpha'>n</span></span>)</span>, where <span class='texttt'><span class='math'><span class='mathalpha'>n</span></span></span> is
+<span class='texttt'>make_tagged_tuple&lt;tag::in1, tag::in2, tag::out&gt;(last1, last2, result + <span class='math'><span class='mathalpha'>n</span></span>)</span>, <br/> where <span class='texttt'><span class='math'><span class='mathalpha'>n</span></span></span> is
 the number of elements in the constructed range.</p></div></div><div class='para' id='set.symmetric.difference-4'><div class='marginalizedparent'><a class='marginalized' href='#set.symmetric.difference-4'>4</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 At most
 <span class='texttt'>2 * ((last1 - first1) + (last2 - first2)) - 1</span>
@@ -577,7 +577,7 @@ may be removed by
 or a new element added by
 <span class='texttt'>push_heap()</span>,
 in
-<span class='math'><span class='mathcal'>O</span>(<span class="mathrm">log</span>(<span class='mathalpha'>N</span>))</span>
+<span class='math'>Ο(<span class='math'><span class="mathrm">log</span>(<span class='mathalpha'>N</span>)</span>)</span>
 time.
 </p></li></ul></div><div class='para' id='alg.heap.operations-2'><div class='marginalizedparent'><a class='marginalized' href='#alg.heap.operations-2'>2</a></div><p >These properties make heaps useful as priority queues.</p></div><div class='para' id='alg.heap.operations-3'><div class='marginalizedparent'><a class='marginalized' href='#alg.heap.operations-3'>3</a></div><p ><span class='texttt'>make_heap()</span>
 converts a range into a heap and
@@ -763,7 +763,7 @@ such that for every iterator
 <span class='texttt'>j</span>
 in the range
 <span class='texttt'>[first,last)</span>
-the following corresponding condition holds:
+the following corresponding condition holds: <br/>
 <span class='texttt'>invoke(comp, invoke(proj, *j), invoke(proj, *i)) == false</span>.
 Returns
 <span class='texttt'>last</span>
@@ -791,7 +791,7 @@ such that for every iterator
 <span class='texttt'>j</span>
 in the range
 <span class='texttt'>[first,last)</span>
-the following corresponding condition holds:
+the following corresponding condition holds: <br/>
 <span class='texttt'>invoke(comp, invoke(proj, *i), invoke(proj, *j)) == false</span>.
 Returns
 <span class='texttt'>last</span>
