--- a/ranges-ts/iterators.html
+++ b/ranges-ts/iterators.html
@@ -1290,7 +1290,7 @@ The nested type \tcode{pointer} is computed as follows:
 \begin{itemize}
 \item If
       \tcode{Out::pointer} is valid and denotes a type, then
-      \tcode{std::iterator_traits&lt;Out&gt;::pointer} is \tcode{Out::pointer}.
+      \tcode{std::iterator_traits&lt;Out&gt;::pointer} is \tcode{Out::\brk{}pointer}.
 \item Otherwise, \tcode{std::iterator_traits&lt;Out&gt;::pointer} is \tcode{void}.
 \end{itemize}
 
@@ -3314,9 +3314,9 @@ istreambuf_iterator(basic_istream&lt;charT, traits&gt;&amp; s) noexcept;
 istreambuf_iterator(basic_streambuf&lt;charT, traits&gt;* s) noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='istreambuf.iterator.cons-2'><div class='marginalizedparent'><a class='marginalized' href='#istreambuf.iterator.cons-2'>2</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Constructs an
-<span class='texttt'>istreambuf_iterator&lt;&gt;</span>
+<span class='texttt'>istreambuf_iterator</span>
 that uses the
-<span class='texttt'>basic_streambuf&lt;&gt;</span>
+<span class='texttt'>basic_streambuf</span>
 object
 <span class='texttt'>*(s.rdbuf())</span>,
 or
@@ -3329,9 +3329,9 @@ is null.
 istreambuf_iterator(const proxy&amp; p) noexcept;
 </code></p><div class='itemdescr'></div><div class='para' id='istreambuf.iterator.cons-3'><div class='marginalizedparent'><a class='marginalized' href='#istreambuf.iterator.cons-3'>3</a></div><div class='itemdescr'><p ><i>Effects:</i>
 Constructs a
-<span class='texttt'>istreambuf_iterator&lt;&gt;</span>
+<span class='texttt'>istreambuf_iterator</span>
 that uses the
-<span class='texttt'>basic_streambuf&lt;&gt;</span>
+<span class='texttt'>basic_streambuf</span>
 object pointed to by the
 <span class='texttt'>proxy</span>
 object's constructor argument <span class='texttt'>p</span>.
