--- a/ranges-ts/set.symmetric.difference.html
+++ b/ranges-ts/set.symmetric.difference.html
@@ -28,7 +28,7 @@ to the range beginning at
 <span class='texttt'>result</span>.
 The elements in the constructed range are sorted.</p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Requires:</i>
 The resulting range shall not overlap with either of the original ranges.</p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Returns:</i>
-<span class='texttt'>make_tagged_tuple&lt;tag::in1, tag::in2, tag::out&gt;(last1, last2, result + <span class='math'><span class='mathalpha'>n</span></span>)</span>, where <span class='texttt'><span class='math'><span class='mathalpha'>n</span></span></span> is
+<span class='texttt'>make_tagged_tuple&lt;tag::in1, tag::in2, tag::out&gt;(last1, last2, result + <span class='math'><span class='mathalpha'>n</span></span>)</span>, <br/> where <span class='texttt'><span class='math'><span class='mathalpha'>n</span></span></span> is
 the number of elements in the constructed range.</p></div></div><div class='para' id='4'><div class='marginalizedparent'><a class='marginalized' href='#4'>4</a></div><div class='itemdescr'><p ><i>Complexity:</i>
 At most
 <span class='texttt'>2 * ((last1 - first1) + (last2 - first2)) - 1</span>
