--- a/ranges-ts/alg.fill.html
+++ b/ranges-ts/alg.fill.html
@@ -12,9 +12,7 @@ template &lt;class T, OutputIterator&lt;const T&amp;&gt; O&gt;
 <span class='texttt'>fill</span> assigns <span class='texttt'>value</span> through all the
 iterators in the range <span class='texttt'>[first,last)</span>. <span class='texttt'>fill_n</span>
 assigns <span class='texttt'>value</span> through all the iterators in the counted range <span class='texttt'>[first,n)</span>
-if <span class='texttt'>n</span> is positive, otherwise it does nothing.</p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i> <span class='texttt'>fill</span> returns <span class='texttt'>last</span>. <span class='texttt'>fill_n</span> returns <span class='texttt'>first + n</span>
-for non-negative values of <span class='texttt'>n</span> and <span class='texttt'>first</span> for negative values.</p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Complexity:</i>
-Exactly
-<span class='texttt'>last - first</span>,
-<span class='texttt'>n</span>, or 0 assignments, respectively.
+if <span class='texttt'>n</span> is positive, otherwise it does nothing.</p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Returns:</i>
+<span class='texttt'>last</span>, where <span class='texttt'>last</span> is <span class='texttt'>first + max(n, 0)</span> for <span class='texttt'>fill_n</span>.</p></div></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><div class='itemdescr'><p ><i>Complexity:</i>
+Exactly <span class='texttt'>last - first</span> assignments.
 </p></div></div></div></div></body></html>
