--- a/ranges-ts/algorithms.general.html
+++ b/ranges-ts/algorithms.general.html
@@ -393,16 +393,16 @@ namespace std { namespace experimental { namespace ranges { inline namespace v1 
     O fill_n(O first, difference_type_t&lt;O&gt; n, const T&amp; value);
 
   template &lt;Iterator O, Sentinel&lt;O&gt; S, CopyConstructible F&gt;
-      requires Callable&lt;F&amp;&gt; &amp;&amp; Writable&lt;O, result_of_t&lt;F&amp;()&gt;&gt;
+      requires Invocable&lt;F&amp;&gt; &amp;&amp; Writable&lt;O, result_of_t&lt;F&amp;()&gt;&gt;
     O generate(O first, S last, F gen);
 
   template &lt;class Rng, CopyConstructible F&gt;
-      requires Callable&lt;F&amp;&gt; &amp;&amp; OutputRange&lt;Rng, result_of_t&lt;F&amp;()&gt;&gt;
+      requires Invocable&lt;F&amp;&gt; &amp;&amp; OutputRange&lt;Rng, result_of_t&lt;F&amp;()&gt;&gt;
     safe_iterator_t&lt;Rng&gt;
       generate(Rng&amp;&amp; rng, F gen);
 
   template &lt;Iterator O, CopyConstructible F&gt;
-      requires Callable&lt;F&amp;&gt; &amp;&amp; Writable&lt;O, result_of_t&lt;F&amp;()&gt;&gt;
+      requires Invocable&lt;F&amp;&gt; &amp;&amp; Writable&lt;O, result_of_t&lt;F&amp;()&gt;&gt;
     O generate_n(O first, difference_type_t&lt;O&gt; n, F gen);
 
   template &lt;ForwardIterator I, Sentinel&lt;I&gt; S, class T, class Proj = identity&gt;
