--- a/ranges-ts/structure.html
+++ b/ranges-ts/structure.html
@@ -44,5 +44,5 @@ constraints (Concepts TS [temp.constr.decl]). When the associated constraints
 refer to a concept (Concepts TS [dcl.spec.concept]), additional semantic requirements are
 imposed on the use of the declaration.</p></div><div class='footnote' id='footnote-2'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-2'>2)</a></div><p >Although in some cases the code given is
 unambiguously the optimum implementation.</p></div></div><div id='specifications'><h4 ><a class='secnum' href='#specifications' style='min-width:118pt'>6.2.1.4</a> Detailed specifications <a class='abbr_ref' href='structure.specifications'>[structure.specifications]</a></h4><div class='para' id='specifications-1'><div class='marginalizedparent'><a class='marginalized' href='#specifications-1'>1</a></div><p >The detailed specifications of each entity defined in
-Clauses <a href='concepts.lib'>[concepts.lib]</a>–<a href='numerics'>[numerics]</a> follows the conventions
+Clauses <a href='concepts.lib'>[concepts.lib]</a>–<a href='numerics'>[numerics]</a> follow the conventions
 established by   ISO/IEC 14882:2014 &sect;<a href='../n4140/structure.specifications'>[structure.specifications]</a>.</p></div></div></div></div></body></html>
